updated projects section

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,5 +1,9 @@
 <Title text="Projects" />
 
-- [react-native-draftjs](https://github.com/DaniAkash/react-native-draftjs) ﹣ A full featured, customizable rich text editor for React Native based on draft.js
-- [react-native-responsive-dimensions](https://github.com/DaniAkash/react-native-responsive-dimensions) ﹣ Responsive height, width and fontSize for React Native with hooks support
-- [no-pollution](https://github.com/DaniAkash/no-pollution) - Easiest way to prevent JavaScript prototype pollution attacks in your project
+- [rex-state](https://github.com/daniakash/rex-state) - The simplest state management tool for React
+- [react-native-draftjs](https://github.com/DaniAkash/react-native-draftjs) ﹣ A full fledged React Native Rich Text editor based on draft.js
+- [react-native-responsive-dimensions](https://github.com/DaniAkash/react-native-responsive-dimensions) ﹣ Resposive fontSize, height and width for react-native components, that automatically adjusts itself based on screen-size of the device
+- [react-native-blank-spacer](https://github.com/DaniAkash/react-native-blank-spacer) - Free your components from margins using the blank spacer!
+- [react-native-masonry-scrollview](https://github.com/DaniAkash/react-native-masonry-scrollview) - A React Native Masonry ScrollView that extends the in-built ScrollView component
+- [no-pollution](https://github.com/DaniAkash/no-pollution) - Prevent prototype pollution by sanitizing all string inputs to the JSON parser
+- [react-native-pss](https://github.com/DaniAkash/react-native-pss) - Platform Specific Styles. Create simple platform specific stylesheets for React Native
